Ajustando os caminhos das imagens e dos links

--- a/Trabalho1/flappy.html
+++ b/Trabalho1/flappy.html
@@ -13,7 +13,7 @@
 <body class="conteudo">
     <header>
         <nav class="menu">
-            <a class="link" href="form.html"><img class="logo" src="../img/bird.png" alt="logo">
+            <a class="link" href="form.html"><img class="logo" src="./img/bird.png" alt="logo">
                 Flappy Bird</h2>
             </a>
         </nav>
