--- a/Trabalho1/form.html
+++ b/Trabalho1/form.html
@@ -15,7 +15,7 @@
 
   <header>
     <nav class="menu">
-      <a class="link" href="form.html"><img class="logo" src="../img/bird.png" alt="logo">
+      <a class="link" href="form.html"><img class="logo" src="./img/bird.png" alt="logo">
         Flappy Bird</h2>
       </a>
     </nav>
